<resources>
    <string name="app_name">ToDoList</string>
    <string name="month_value">Januar</string>
    <string name="year_value">2021</string>
    <string name="day_value">Mo. 01</string>
    <string name="appName">TODO</string>
    <string name="day_input">Mo. 01</string>
    <string name="input_string">Was hast du zu tun?</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="w_hle_ein_datum">Wähle ein Datum:</string>
    <string name="zum_todo">Zum ToDo</string>
    <string name="deine_todo_s"><u>Deine ToDo\'s:</u></string>
</resources>