<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".NotificationActivity">

    <Button
        android:id="@+id/menu_button_todo"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="241dp"
        android:background="@drawable/menu_button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/calendar_background"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calendar_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_calender" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/impact"
        android:includeFontPadding="false"
        android:text="@string/year_value"
        android:textColor="#78FFED"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/calendar_background"
        app:layout_constraintStart_toStartOf="@+id/calendar_background"
        app:layout_constraintTop_toTopOf="@+id/calendar_background" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/impact"
        android:includeFontPadding="false"
        android:text="@string/month_value"
        android:textColor="#78FFED"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/calendar_background"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/calendar_background"
        app:layout_constraintTop_toTopOf="@+id/calendar_background" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/impact"
        android:includeFontPadding="false"
        android:text="@string/day_value"
        android:textColor="#78FFED"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/calendar_background"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/calendar_background"
        app:layout_constraintTop_toTopOf="@+id/calendar_background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="415dp"
        android:layout_height="638dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_background"
        app:srcCompat="@drawable/to_do_rectangle" />

    <TextView
        android:id="@+id/choosed_todo"
        android:layout_width="369dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/arialr"
        android:text="ToDoTest....."
        android:textAlignment="center"
        android:textColor="#A479D5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/arialr"
        android:text="Wann möchtest du eine Erinnerung?"
        android:textColor="#78B7FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choosed_todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/arialr"
        android:text="Stunden:"
        android:textColor="#78B7FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_slider2_minutes" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/arialr"
        android:text="Minuten:"
        android:textColor="#78B7FF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.slider.Slider
        android:id="@+id/notification_slider_hours"
        android:layout_width="350dp"
        android:layout_height="88dp"
        android:layout_marginTop="12dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="24"
        app:haloColor="@color/sliderColor"
        app:labelStyle="@style/Widget.App.Tooltip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:thumbColor="@color/colorAccent"
        app:tickColor="@color/colorAccent"
        app:trackColor="@color/sliderColor" />

    <com.google.android.material.slider.Slider
        android:id="@+id/notification_slider2_minutes"
        android:layout_width="350dp"
        android:layout_height="88dp"
        android:layout_marginTop="12dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="60"
        app:haloColor="@color/sliderColor"
        app:labelStyle="@style/Widget.App.Tooltip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:thumbColor="@color/colorAccent"
        app:tickColor="@color/colorAccent"
        app:trackColor="@color/sliderColor" />

    <Button
        android:id="@+id/save_button_noti"
        android:layout_width="32dp"
        android:layout_height="29dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/save_button"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification_slider_hours" />

</androidx.constraintlayout.widget.ConstraintLayout>